--- a/gcc/Makefile_m4_ra2
+++ b/gcc/Makefile_m4_ra2
@@ -3,27 +3,28 @@
 # the list of C source files (SRCS) and ASM source files (ASM_SRSC),
 # and the name of the linker script (LINKER_SCRIPT).
 #
-PROJECT = ra1-loader
+PROJECT = ra2_loader
 
-OBJDIR = obj
-MAKEFILE = Makefile_m4
+OBJDIR = obj_ra2
+MAKEFILE = Makefile_m4_ra2
 
 C_SRCS = \
     main.c bsp.c \
-    loader.c validimage.c
+    loader.c validimage.c config.c
 
 CPP_SRCS =
 
 ASM_SRCS =
 
-LINKER_SCRIPT = lpc54102j512.ld
+LINKER_SCRIPT = lpc54114j256.ld
 
 #
 # Include the make template
 #
-include ./gccmake54102.mk
+include ./gccmake54114.mk
 
 CFLAGS += \
+    -DBOARD_RA=2 \
     -DCHECK_SLAVE_BOOT \
     --specs=nano.specs \
     -O2
